# demo

./: hello.txt
FeedbackTracker/: .replit  README.md  app.py  auth_app.py  bert_analysis.py  check_db.py  db_test.py  debug_main.py  delete_db.py  feedback_system.db  main.py  migrate_db.py  migrate_message_tracking.py  models.py  pyproject.toml  quick_start.py  quick_test.py  report_generator.py  routes.py  run.py  run_simple.py  runapp.py  start.sh  test_app.py  test_features.py  test_server.py
FeedbackTracker/attached_assets/: Pasted--nltk-data-Downloading-package-stopwords-to-nltk-data-C-Users-visal-AppData-Roaming-nltk-da-1747222131631.txt  Pasted-INFO-werkzeug-192-168-79-8-14-May-2025-16-42-35-GET-HTTP-1-1-302-ERROR-app-Exception-on-1747221205967.txt  Pasted-jinja2-exceptions-UndefinedError-Response-is-undefined-Traceback-most-recent-call-last-File-1747223754092.txt  Pasted-jinja2-exceptions-UndefinedError-Response-is-undefined-Traceback-most-recent-call-last-File-1747229540177.txt  Pasted-jinja2-exceptions-UndefinedError-dict-object-has-no-attribute-Positive-Traceback-most-recen-1747314603527.txt
FeedbackTracker/static/css/: custom.css
FeedbackTracker/static/js/: charts.js  scripts.js  star_rating.js
FeedbackTracker/templates/: category_analysis.html  dashboard_staff.html  dashboard_staff_new.html  dashboard_student.html  direct_messages.html  error.html  feedback_form.html  feedback_tracking.html  feedback_view.html  layout.html  login.html  manage_students.html  register.html  reset_password.html  test_features.html
